# $Id$

if THUNAR_PLUGIN_APR
THUNAR_APR_SUBDIRS = thunar-apr
endif

if THUNAR_PLUGIN_SBR
THUNAR_SBR_SUBDIRS = thunar-sbr
endif

if THUNAR_PLUGIN_UCA
THUNAR_UCA_SUBDIRS = thunar-uca
endif

SUBDIRS =								\
	$(THUNAR_APR_SUBDIRS)						\
	$(THUNAR_SBR_SUBDIRS)						\
	$(THUNAR_UCA_SUBDIRS)						\
	thunar-sendto-email

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
