if THUNAR_PLUGIN_APR
THUNAR_APR_SUBDIRS = thunar-apr
endif

if THUNAR_PLUGIN_SBR
THUNAR_SBR_SUBDIRS = thunar-sbr
endif

if THUNAR_PLUGIN_TPA
THUNAR_TPA_SUBDIRS = thunar-tpa
endif

if THUNAR_PLUGIN_UCA
THUNAR_UCA_SUBDIRS = thunar-uca
endif

if THUNAR_PLUGIN_WALLPAPER
THUNAR_WALLPAPER_SUBDIRS = thunar-wallpaper
endif

SUBDIRS =								\
	$(THUNAR_APR_SUBDIRS)						\
	$(THUNAR_SBR_SUBDIRS)						\
	$(THUNAR_TPA_SUBDIRS)						\
	$(THUNAR_UCA_SUBDIRS)						\
	$(THUNAR_WALLPAPER_SUBDIRS)					\
	thunar-sendto-email

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
